[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
itertools = "0.10.1"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nalgebra = "0.29.0"
hashbrown = "0.11.2"
bitvec = "0.22.3"
